<resources>
    <string name="app_name">Alcolator</string>
    <string name="frmAdd_lblTagTxt">Pub/tag:</string>
    <string name="frmAdd_lblNameTxt">Drink name:</string>
    <string name="frmAdd_lblVolTxt">Drink volume (ml):</string>
    <string name="frmAdd_lblPctTxt">Drink percentage:</string>
    <string name="frmAdd_lblPriceTxt">Drink price:</string>
    <string name="frmAdd_btnAddTxt">Save</string>
    <string name="frmAdd_btnCancelTxt">Cancel</string>
    <string name="det_tvTagLblTxt">Pub/tag:</string>
    <string name="det_tvNameLblTxt">Drink name:</string>
    <string name="det_tvIDLblTxt">ID:</string>
    <string name="det_tvVolLblTxt">Volume (ml):</string>
    <string name="det_tvPctLblTxt">Percentage:</string>
    <string name="det_tvPriceLblTxt">Price:</string>
    <string name="det_tvPricePerMLAlcLblTxt">Price per ml alcohol:</string>
    <string name="det_tvPricePerMLDrinkLblTxt">Price per ml drink:</string>
    <string name="det_tvVolWaterLblTxt">Amount of water (ml):</string>
    <string name="det_tvVolAlcLblTxt">Amount of alcohol (ml):</string>
    <string name="det_btnEditTxt">Edit</string>
    <string name="det_btnDeleteTxt">Delete</string>
    <string name="det_btnCloseTxt">Close</string>
    <string name="dlgDelAll_msgTxt">Delete all drinks?</string>
    <string name="dlgDelAll_btnOkTxt">Delete</string>
    <string name="dlgDelAll_btnCancelTxt">Cancel</string>
    <string name="dlgDelOne_msgTxt">Delete \"%1$s\”?</string>
    <string name="dlgDelOne_btnOkTxt">Delete</string>
    <string name="dlgDelOne_btnCancelTxt">Cancel</string>
    <string name="dlgTagList_tvTagListHdrLblTxt">Filter by tag:</string>
    <string name="dlgTagList_btnResetTxt">Reset/Close</string>
    <string name="menu_delAllTxt">Delete all drinks</string>
    <string name="menu_backupTxt">Export backup</string>
    <string name="menu_restoreTxt">Import backup</string>
    <string name="act_DrinkDetailsTitle">Drink details</string>
    <string name="cmpDrinksHdr">Compare From List</string>
    <string name="cmpDrinksManualHdr">Compare Manually</string>
    <string name="cmpDrink1Hdr">Drink #1</string>
    <string name="cmpDrink2Hdr">Drink #2</string>
    <string name="cmpDrinkBtnClearLbl">Clear</string>
    <string name="cmpDrink1NameLbl">Drinks:</string>
    <string name="cmpDrink1VolLbl">Vol (ml):</string>
    <string name="cmpDrink1AlcVolLbl">Alc (ml):</string>
    <string name="cmpDrink1PctLbl">Percent:</string>
    <string name="cmpDrink1AmountLbl">Amount:</string>
    <string name="cmpDrink1AmountVal">1</string>
    <string name="cmpDrink1PriceLbl">Price:</string>
    <string name="cmpDrink1PricePMLALbl">Price per ml alcohol:</string>
    <string name="cmpDrinkSpnHdr">-- Select Drink</string>
    <string name="cmpDrink2NameLbl">Drink:</string>
    <string name="cmpDrink2PctLbl">Percentage:</string>
    <string name="cmpDrink2AmountLbl">Amount:</string>
    <string name="cmpDrink2VolLbl">Total volume (ml):</string>
    <string name="cmpDrink2AlcVolLbl">Alcohol volume (ml):</string>
    <string name="cmpDrink2PriceLbl">Price:</string>
    <string name="cmpDrink2PricePMLALbl">Price per ml alcohol:</string>
    <string name="cmpDrinkSepLbl">=</string>
    <string name="navHostFragTagMain">NavHostFragTagMain</string>

    <string-array name="colHdrs">
        <item>Name</item>
        <item>Vol (ml)</item>
        <item>Price</item>
        <item>%</item>
        <item>Alc (ml)</item>
        <item>ML price alc</item>
    </string-array>

    <string-array name="bogusDrinks">
        <item>@string/cmpDrinkSpnHdr</item>
        <item>Sitting Bulldog @ Old Town</item>
        <item>Folköl @ Butiken</item>
        <item>Rödvin @ Systemet</item>
    </string-array>
    <string name="title_activity_main">Alcolator</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>
