<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:id="@+id/tblDrinkDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/lbl_def_margin"
        android:stretchColumns="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/lbl_def_margin"
            android:layout_marginEnd="@dimen/lbl_def_margin">

            <TextView
                android:id="@+id/tvIDLbl"
                android:layout_marginEnd="@dimen/lbl_def_margin"
                android:text="@string/det_tvIDLblTxt" />

            <TextView android:id="@+id/tvIDVal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/lbl_def_margin"
            android:layout_marginEnd="@dimen/lbl_def_margin">

            <TextView
                android:id="@+id/tvTagLbl"
                android:layout_marginEnd="@dimen/lbl_def_margin"
                android:text="@string/det_tvTagLblTxt" />

            <TextView android:id="@+id/tvTagVal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/lbl_def_margin"
            android:layout_marginEnd="@dimen/lbl_def_margin">

            <TextView
                android:id="@+id/tvNameLbl"
                android:layout_marginEnd="@dimen/lbl_def_margin"
                android:text="@string/det_tvNameLblTxt" />

            <TextView android:id="@+id/tvNameVal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/lbl_def_margin"
            android:layout_marginEnd="@dimen/lbl_def_margin">

            <TextView
                android:id="@+id/tvVolLblTxt"
                android:layout_marginEnd="@dimen/lbl_def_margin"
                android:text="@string/det_tvVolLblTxt" />

            <TextView android:id="@+id/tvVolVal" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/lbl_def_margin"
            android:layout_marginEnd="@dimen/lbl_def_margin">

            <TextView
                android:id="@+id/tvPctLblTxt"
                android:layout_marginEnd="@dimen/lbl_def_margin"
                android:text="@string/det_tvPctLblTxt" />

            <TextView android:id="@+id/tvPctVal" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/lbl_def_margin"
            android:layout_marginEnd="@dimen/lbl_def_margin">

            <TextView
                android:id="@+id/tvPriceLblTxt"
                android:layout_marginEnd="@dimen/lbl_def_margin"
                android:text="@string/det_tvPriceLblTxt" />

            <TextView android:id="@+id/tvPriceVal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/lbl_def_margin"
            android:layout_marginEnd="@dimen/lbl_def_margin">

            <TextView
                android:id="@+id/tvPricePerMLAlcLbl"
                android:layout_marginEnd="@dimen/lbl_def_margin"
                android:text="@string/det_tvPricePerMLAlcLblTxt" />

            <TextView android:id="@+id/tvPricePerMLAlcVal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/lbl_def_margin"
            android:layout_marginEnd="@dimen/lbl_def_margin">

            <TextView
                android:id="@+id/tvPricePerMLDrinkLbl"
                android:layout_marginEnd="@dimen/lbl_def_margin"
                android:text="@string/det_tvPricePerMLDrinkLblTxt" />

            <TextView android:id="@+id/tvPricePerMLDrinkVal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/lbl_def_margin"
            android:layout_marginEnd="@dimen/lbl_def_margin">

            <TextView
                android:id="@+id/tvVolWaterLbl"
                android:layout_marginEnd="@dimen/lbl_def_margin"
                android:text="@string/det_tvVolWaterLblTxt" />

            <TextView android:id="@+id/tvVolWaterVal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/lbl_def_margin"
            android:layout_marginEnd="@dimen/lbl_def_margin">

            <TextView
                android:id="@+id/tvVolAlcLbl"
                android:layout_marginEnd="@dimen/lbl_def_margin"
                android:text="@string/det_tvVolAlcLblTxt" />

            <TextView android:id="@+id/tvVolAlcVal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/lbl_def_margin"
            android:layout_marginEnd="@dimen/lbl_def_margin">

            <Button
                android:id="@+id/btnEdit"
                android:text="@string/det_btnEditTxt" />

            <Button
                android:id="@+id/btnDelete"
                android:text="@string/det_btnDeleteTxt" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/lbl_def_margin"
            android:layout_marginEnd="@dimen/lbl_def_margin">

            <Button
                android:id="@+id/btnClose"
                android:layout_span="2"
                android:text="@string/det_btnCloseTxt" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
