<?xml version ="1.0" encoding ="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete_all"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="100"
        android:title="@string/menu_delAllTxt"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_backup"
        android:icon="@drawable/ic_backup"
        android:orderInCategory="101"
        android:title="@string/menu_backupTxt"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_backup_restore"
        android:icon="@drawable/ic_backup_restore"
        android:orderInCategory="102"
        android:title="@string/menu_restoreTxt"
        app:showAsAction="collapseActionView" />
</menu>
